CHANGES
=======

1.6 (unreleased)
----------------

1.5 (2008-11-24)
----------------

- Be smarter when invalidating folders when objects are added or deleted. This
  should lead to much better performance for adds/deletes.

1.4.7 (2008-11-20)
------------------

- No more test extra.
- Functional test layer can be torn down.

1.4.6 (2008-11-19)
------------------

- PropertyCache and ChildNameCache do not write data when the value is
  already stored in the cache. This should lead to fewer conflict errors.

1.4.5 (2008-08-12)
------------------

- Fixed a bug in the body cache which lead to a database write on cache read.

1.4.4 (2008-08-07)
------------------

- The discovery of the cannonical id of a resource does a HEAD request on the
  base url (w/o trailing slash) now. This leads to massively decreased 404's on
  the server.
- Removed auto-redirect in dav module as this was not required and just added
  complexity.
- Removed unnecessary PROPFIND's in dav module.
- Added a stress test which does property changes in parallel.

1.4.3 (2008-08-05)
------------------

- Changed the way the body cache keeps track of access times. The new way is
  hopefully less conflict prone.


1.4.2 (2008-08-05)
------------------

- When the connector invalidates resources, the're reloaded immedeately to
  have less conflict potential.

1.4.1 (2008-08-01)
------------------

- Made cache sweep more stable agains inconsistent data.

1.4 (2008-08-01)
----------------

- Empty WebDAV properties were returned as None and subsequently stored as
  'None' (fixes bug #4443).

1.3 (2008-07-29)
----------------

- Reverted changes from 1.2 and added a test to make sure the properties are in
  fact updated.

1.2 (2008-07-29)
----------------

- Do not re-set the property cache on ``changeProperties`` but just update.

1.1 (2008-07-24)
----------------

- Body-Cache doesn't store strings directly but via a persistent object.
- Use a Singleton class for webdav property keys.